<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/auth_padding"
    tools:context=".ui.auth.forgotPassword.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_label"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/welcomeBackLabel" />

    <EditText
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="Password"
        android:paddingHorizontal="12dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/custom_auth_input"
        app:layout_constraintTop_toBottomOf="@id/welcomeBackLabel"
        android:layout_marginTop="31dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/passwordEditText" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_desc"
        android:textColor="@color/input_stroke"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/custom_auth_button"
        android:textColor="@color/white"
        android:text="@string/submit_label"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>